--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
     "framer-motion": "^12.7.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
