--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,18 @@
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
     "framer-motion": "^12.7.4",
+    "html-pdf-node": "^1.0.8",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "markdown-pdf": "^11.0.0",
     "next": "15.3.1",
+    "puppeteer": "^24.11.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
