--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
+    "firebase": "^11.9.1",
     "framer-motion": "^12.7.4",
     "html-pdf-node": "^1.0.8",
     "html2canvas": "^1.4.1",
